socket_server/ss-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: socket-server-service
spec:
  type: ClusterIP  # Use NodePort or LoadBalancer to expose outside the cluster
  selector:
    app: socket-server
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
