socket_server/ss-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: socket
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/server-snippets: |
      location /socket/ {
        proxy_set_header Upgrade $http_upgrade;
        proxy_http_version 1.1;
        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
        proxy_set_header Host $http_host;
        proxy_set_header Connection "upgrade";
        proxy_set_header X-Forwarded-Host $host;
        proxy_set_header X-Forwarded-Proto $scheme;
        proxy_cache_bypass $http_upgrade;
      }

spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /socket
        pathType: Prefix
        backend:
          service:
            name: socket
            port:
              number: 5001
